--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -64,53 +64,70 @@
     <p class="text-lg text-gray-700">Consulta clasificaciones, resultados y próximos encuentros de tus ligas favoritas.</p>
   </section>
 
-  <!-- Tarjetas principales -->
-  <main class="max-w-6xl mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-3 gap-8">
+ <!-- Tarjetas principales -->
+<main class="max-w-6xl mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-3 gap-8">
   <!-- Clasificación -->
-  <a href="clasificacion.html" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 border-2 border-primary hover:border-secondary">
+  <a href="clasificacion.html" 
+     class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
+            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
+            transition duration-300">
     <h3 class="text-xl font-semibold mb-2">🏆 Clasificación</h3>
     <p class="text-gray-600">Accede a la tabla de posiciones de cada liga y categoría.</p>
   </a>
 
   <!-- Resultados -->
-  <a href="resultados.html" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 border-2 border-primary hover:border-secondary">
+  <a href="resultados.html" 
+     class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
+            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
+            transition duration-300">
     <h3 class="text-xl font-semibold mb-2">⚽ Resultados</h3>
     <p class="text-gray-600">Consulta los resultados actualizados de los últimos partidos.</p>
   </a>
 
   <!-- Próximos encuentros -->
-  <a href="encuentros.html" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 border-2 border-primary hover:border-secondary">
+  <a href="encuentros.html" 
+     class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
+            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
+            transition duration-300">
     <h3 class="text-xl font-semibold mb-2">📅 Próximos Encuentros</h3>
     <p class="text-gray-600">Revisa el calendario de partidos programados.</p>
   </a>
 
   <!-- Creador de Ligas -->
-  <a href="creaLigas.html" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 border-2 border-primary hover:border-secondary">
+  <a href="creaLigas.html" 
+     class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
+            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
+            transition duration-300">
     <h3 class="text-xl font-semibold mb-2">🏟️ Creador de Ligas</h3>
     <p class="text-gray-600">Crea nuevas ligas y organiza los torneos de tu asociación.</p>
   </a>
 
   <!-- Creador de Categorías -->
-  <a href="creaCategoria.html" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 border-2 border-primary hover:border-secondary">
+  <a href="creaCategoria.html" 
+     class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
+            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
+            transition duration-300">
     <h3 class="text-xl font-semibold mb-2">📂 Creador de Categorías</h3>
     <p class="text-gray-600">Añade categorías y divide las ligas según niveles o edades.</p>
   </a>
 
   <!-- Estadisticas Equipo -->
-  <a href="creaLigas.html" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 border-2 border-primary hover:border-secondary">
+  <a href="creaLigas.html" 
+     class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
+            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
+            transition duration-300">
     <h3 class="text-xl font-semibold mb-2">🎽 Estadisticas por equipo</h3>
     <p class="text-gray-600">Revisa las estadisticas por equipo</p>
   </a>
 
   <!-- Estadisticas Jugador-->
-  <a href="creaLigas.html" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 border-2 border-primary hover:border-secondary">
+  <a href="creaLigas.html" 
+     class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
+            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
+            transition duration-300">
     <h3 class="text-xl font-semibold mb-2">👥 Estadisticas por jugador</h3>
     <p class="text-gray-600">Revisa las estadisticas por jugador</p>
   </a>
-
-
-
-
 </main>
 
 <!-- Footer -->
