--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -21,24 +21,25 @@
 </head>
 <body class="bg-neutralbg text-gray-900">
 
-  <!-- Navbar -->
-  <header class="bg-primary text-white">
+<!-- Navbar -->
+<header class="bg-primary text-white">
   <nav class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
     <!-- Logo / Nombre -->
     <a href="index.html" class="text-2xl font-bold">Asociación Deportiva de la Paz</a>
 
     <!-- Menú principal desktop -->
     <ul class="hidden md:flex space-x-6 font-medium">
-      <li><a href="equipos.html" class="hover:text-secondary transition-colors">Equipos</a></li>
-      <li><a href="clasificacion.html" class="hover:text-secondary transition-colors">Clasificaciones</a></li>
-      <li><a href="estadisticas.html" class="hover:text-secondary transition-colors">Estadísticas</a></li>
-      <li><a href="encuentros.html" class="hover:text-secondary transition-colors">Próximos encuentros</a></li>
+      <li><a href="equipos.html" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">Equipos</a></li>
+      <li><a href="clasificacion.html" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">Clasificaciones</a></li>
+      <li><a href="estadisticas.html" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">Estadísticas</a></li>
+      <li><a href="encuentros.html" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">Próximos encuentros</a></li>
     </ul>
 
-    <!-- Botón Login en Navbar -->
-<a href="#" id="open-login" class="hidden md:inline-block bg-secondary text-white px-4 py-2 rounded-lg hover:bg-orange-500 transition-colors font-semibold">
-  Login
-</a>
+    <!-- Botón Login desktop -->
+    <a href="#" id="open-login" class="hidden md:inline-block bg-secondary text-white px-4 py-2 rounded-lg 
+       hover:bg-orange-500 transform hover:-translate-y-1 transition duration-300 font-semibold">
+      Login
+    </a>
 
     <!-- Botón menú móvil -->
     <button id="menu-btn" class="md:hidden focus:outline-none ml-2">
@@ -46,14 +47,18 @@
     </button>
   </nav>
 
-  <!-- Menú móvil -->
+   <!-- Menú móvil -->
   <div id="mobile-menu" class="hidden md:hidden bg-primary">
     <ul class="flex flex-col items-center py-2 space-y-2">
-      <li><a href="equipos.html" class="block hover:text-secondary transition-colors">Equipos</a></li>
-      <li><a href="clasificacion.html" class="block hover:text-secondary transition-colors">Clasificaciones</a></li>
-      <li><a href="estadisticas.html" class="block hover:text-secondary transition-colors">Estadísticas</a></li>
-      <li><a href="encuentros.html" class="block hover:text-secondary transition-colors">Próximos encuentros</a></li>
-      <li><a href="login.html" class="block bg-secondary text-white px-4 py-2 rounded-lg hover:bg-orange-500 transition-colors">Login</a></li>
+      <li><a href="equipos.html" class="block hover:text-secondary transform hover:-translate-y-1 transition duration-300">Equipos</a></li>
+      <li><a href="clasificacion.html" class="block hover:text-secondary transform hover:-translate-y-1 transition duration-300">Clasificaciones</a></li>
+      <li><a href="estadisticas.html" class="block hover:text-secondary transform hover:-translate-y-1 transition duration-300">Estadísticas</a></li>
+      <li><a href="encuentros.html" class="block hover:text-secondary transform hover:-translate-y-1 transition duration-300">Próximos encuentros</a></li>
+      <li>
+        <a href="#" class="mobile-login block bg-secondary text-white px-4 py-2 rounded-lg hover:bg-orange-500 transform hover:-translate-y-1 transition duration-300">
+          Login
+        </a>
+      </li>
     </ul>
   </div>
 </header>
@@ -64,13 +69,13 @@
     <p class="text-lg text-gray-700">Consulta clasificaciones, resultados y próximos encuentros de tus ligas favoritas.</p>
   </section>
 
- <!-- Tarjetas principales -->
-<main class="max-w-6xl mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-3 gap-8">
+<!-- Tarjetas principales -->
+<main class="  max-w-6xl mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-3 gap-8">
   <!-- Clasificación -->
   <a href="clasificacion.html" 
      class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
-            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
-            transition duration-300">
+            hover:border-secondary hover:shadow-[0_0_60px_rgba(249,115,22,0.4)]
+            transform hover:-translate-y-2 transition duration-300">
     <h3 class="text-xl font-semibold mb-2">🏆 Clasificación</h3>
     <p class="text-gray-600">Accede a la tabla de posiciones de cada liga y categoría.</p>
   </a>
@@ -78,8 +83,8 @@
   <!-- Resultados -->
   <a href="resultados.html" 
      class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
-            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
-            transition duration-300">
+            hover:border-secondary hover:shadow-[0_0_60px_rgba(249,115,22,0.4)]
+            transform hover:-translate-y-2 transition duration-300">
     <h3 class="text-xl font-semibold mb-2">⚽ Resultados</h3>
     <p class="text-gray-600">Consulta los resultados actualizados de los últimos partidos.</p>
   </a>
@@ -87,8 +92,8 @@
   <!-- Próximos encuentros -->
   <a href="encuentros.html" 
      class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
-            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
-            transition duration-300">
+            hover:border-secondary hover:shadow-[0_0_60px_rgba(249,115,22,0.4)]
+            transform hover:-translate-y-2 transition duration-300">
     <h3 class="text-xl font-semibold mb-2">📅 Próximos Encuentros</h3>
     <p class="text-gray-600">Revisa el calendario de partidos programados.</p>
   </a>
@@ -96,8 +101,8 @@
   <!-- Creador de Ligas -->
   <a href="creaLigas.html" 
      class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
-            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
-            transition duration-300">
+            hover:border-secondary hover:shadow-[0_0_60px_rgba(249,115,22,0.4)]
+            transform hover:-translate-y-2 transition duration-300">
     <h3 class="text-xl font-semibold mb-2">🏟️ Creador de Ligas</h3>
     <p class="text-gray-600">Crea nuevas ligas y organiza los torneos de tu asociación.</p>
   </a>
@@ -105,47 +110,71 @@
   <!-- Creador de Categorías -->
   <a href="creaCategoria.html" 
      class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
-            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
-            transition duration-300">
+            hover:border-secondary hover:shadow-[0_0_60px_rgba(249,115,22,0.4)]
+            transform hover:-translate-y-2 transition duration-300">
     <h3 class="text-xl font-semibold mb-2">📂 Creador de Categorías</h3>
     <p class="text-gray-600">Añade categorías y divide las ligas según niveles o edades.</p>
   </a>
 
-  <!-- Estadisticas Equipo -->
+  <!-- Estadísticas por equipo -->
   <a href="creaLigas.html" 
      class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
-            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
-            transition duration-300">
-    <h3 class="text-xl font-semibold mb-2">🎽 Estadisticas por equipo</h3>
-    <p class="text-gray-600">Revisa las estadisticas por equipo</p>
+            hover:border-secondary hover:shadow-[0_0_60px_rgba(249,115,22,0.4)]
+            transform hover:-translate-y-2 transition duration-300">
+    <h3 class="text-xl font-semibold mb-2">🎽 Estadísticas por equipo</h3>
+    <p class="text-gray-600">Revisa las estadísticas por equipo</p>
   </a>
 
-  <!-- Estadisticas Jugador-->
+  <!-- Estadísticas por jugador -->
   <a href="creaLigas.html" 
      class="bg-white p-6 rounded-2xl shadow-lg border-2 border-primary 
-            hover:border-secondary hover:shadow-[0_0_20px_rgba(249,115,22,0.4)]
-            transition duration-300">
-    <h3 class="text-xl font-semibold mb-2">👥 Estadisticas por jugador</h3>
-    <p class="text-gray-600">Revisa las estadisticas por jugador</p>
+            hover:border-secondary hover:shadow-[0_0_60px_rgba(249,115,22,0.4)]
+            transform hover:-translate-y-2 transition duration-300">
+    <h3 class="text-xl font-semibold mb-2">👥 Estadísticas por jugador</h3>
+    <p class="text-gray-600">Revisa las estadísticas por jugador</p>
   </a>
 </main>
 
 <!-- Footer -->
-  <footer class="bg-primary text-white py-6 mt-12">
-    <div class="max-w-6xl mx-auto text-center space-y-2">
-      <p>&copy; 2025 Asociación Deportiva de la Paz</p>
-      <div class="flex justify-center space-x-6">
-        <a href="#" class="hover:text-secondary transition-colors">Facebook</a>
-        <a href="#" class="hover:text-secondary transition-colors">Twitter</a>
-        <a href="#" class="hover:text-secondary transition-colors">Instagram</a>
-        <a href="#" class="hover:text-secondary transition-colors">Contáctanos</a>
-      </div>
+<footer class="bg-primary text-white py-6 mt-12">
+  <div class="max-w-6xl mx-auto text-center space-y-2">
+    <p>&copy; 2025 Asociación Deportiva de la Paz</p>
+    <div class="flex justify-center space-x-6">
+      <!-- Facebook -->
+      <a href="#" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">
+        <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
+          <path d="M22.675 0h-21.35C.596 0 0 .592 0 1.325v21.351C0 23.408.596 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413c0-3.1 1.893-4.788 4.657-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.763v2.313h3.59l-.467 3.622h-3.123V24h6.116C23.404 24 24 23.408 24 22.675V1.325C24 .592 23.404 0 22.675 0z"/>
+        </svg>
+      </a>
+
+      <!-- Twitter -->
+      <a href="#" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">
+        <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
+          <path d="M24 4.557a9.83 9.83 0 0 1-2.828.775 4.932 4.932 0 0 0 2.165-2.724 9.864 9.864 0 0 1-3.127 1.195 4.916 4.916 0 0 0-8.379 4.482A13.944 13.944 0 0 1 1.671 3.149a4.916 4.916 0 0 0 1.523 6.557 4.897 4.897 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.918 4.918 0 0 0 4.59 3.417A9.867 9.867 0 0 1 0 19.54a13.905 13.905 0 0 0 7.548 2.212c9.056 0 14.01-7.496 14.01-13.986 0-.213-.005-.425-.014-.637A10.012 10.012 0 0 0 24 4.557z"/>
+        </svg>
+      </a>
+
+      <!-- Instagram -->
+      <a href="#" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">
+        <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
+          <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.34 3.608 1.315.975.975 1.253 2.242 1.315 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.34 2.633-1.315 3.608-.975.975-2.242 1.253-3.608 1.315-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.34-3.608-1.315-.975-.975-1.253-2.242-1.315-3.608C2.175 15.747 2.163 15.367 2.163 12s.012-3.584.07-4.85c.062-1.366.34-2.633 1.315-3.608.975-.975 2.242-1.253 3.608-1.315C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.736 0 8.332.012 7.052.072 5.77.132 4.6.35 3.635 1.315 2.67 2.28 2.452 3.45 2.392 4.732.012 8.332 0 8.736 0 12s.012 3.668.072 4.948c.06 1.282.278 2.452 1.243 3.417.965.965 2.135 1.183 3.417 1.243 1.28.06 1.684.072 4.948.072s3.668-.012 4.948-.072c1.282-.06 2.452-.278 3.417-1.243.965-.965 1.183-2.135 1.243-3.417.06-1.28.072-1.684.072-4.948s-.012-3.668-.072-4.948c-.06-1.282-.278-2.452-1.243-3.417-.965-.965-2.135-1.183-3.417-1.243C15.668.012 15.264 0 12 0z"/>
+          <path d="M12 5.838A6.162 6.162 0 1 0 18.162 12 6.162 6.162 0 0 0 12 5.838zm0 10.162A3.999 3.999 0 1 1 16 12a4 4 0 0 1-4 4zm6.406-11.845a1.44 1.44 0 1 0 1.44 1.44 1.44 1.44 0 0 0-1.44-1.44z"/>
+        </svg>
+      </a>
+
+      <!-- Contacto -->
+      <a href="#" class="hover:text-secondary transform hover:-translate-y-1 transition duration-300">
+        <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
+          <path d="M21 8V7l-3 2-2-1-7 7-4-4-3 2V7h18z"/>
+        </svg>
+      </a>
     </div>
-  </footer>
+  </div>
+</footer>
 
 
 
-<!-- Modal -->
+<!-- Modal Login -->
 <div id="login-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
   <div class="bg-white rounded-2xl shadow-xl w-full max-w-md p-6 relative">
     <!-- Botón Cerrar -->
@@ -155,10 +184,10 @@
     <h2 class="text-2xl font-bold mb-4 text-primary text-center">Iniciar Sesión</h2>
 
     <!-- Formulario Login -->
-    <form class="space-y-4">
+    <form id="loginForm" class="space-y-4">
       <div>
         <label class="block text-gray-700 font-medium">Correo electrónico</label>
-        <input type="email" class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-secondary outline-none" placeholder="ejemplo@correo.com" required>
+        <input type="email" id="username" class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-secondary outline-none" placeholder="ejemplo@correo.com" required>
       </div>
       <div>
         <label class="block text-gray-700 font-medium">Contraseña</label>
@@ -179,15 +208,27 @@
 
   
 
-  <script>
-    const openLogin = document.getElementById("open-login");
-  const closeLogin = document.getElementById("close-login");
+<!-- JavaScript -->
+<script>
+  // Toggle menú móvil
+  const menuBtn = document.getElementById("menu-btn");
+  const mobileMenu = document.getElementById("mobile-menu");
+  menuBtn.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+
+  // Modal Login
+  const loginBtns = document.querySelectorAll("#open-login, .mobile-login");
   const loginModal = document.getElementById("login-modal");
+  const closeLogin = document.getElementById("close-login");
+  const loginForm = document.getElementById("loginForm");
 
   // Abrir modal
-  openLogin.addEventListener("click", (e) => {
-    e.preventDefault();
-    loginModal.classList.remove("hidden");
+  loginBtns.forEach(btn => {
+    btn.addEventListener("click", e => {
+      e.preventDefault();
+      loginModal.classList.remove("hidden");
+    });
   });
 
   // Cerrar modal
@@ -196,48 +237,34 @@
   });
 
   // Cerrar al hacer click fuera del modal
-  window.addEventListener("click", (e) => {
-    if (e.target === loginModal) {
+  window.addEventListener("click", e => {
+    if(e.target === loginModal) {
       loginModal.classList.add("hidden");
     }
   });
 
-  const loginBtn = document.getElementById("openLogin");
-    const modal = document.getElementById("loginModal");
-    const closeModal = document.getElementById("closeModal");
-    const loginForm = document.getElementById("loginForm");
-    const userArea = document.getElementById("userArea");
-
-    // Abrir modal
-    loginBtn.addEventListener("click", () => {
-      modal.style.display = "flex";
-    });
-
-    // Cerrar modal
-    closeModal.addEventListener("click", () => {
-      modal.style.display = "none";
-    });
-
-    // Guardar usuario
-    loginForm.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const username = document.getElementById("username").value;
-      if(username){
-        localStorage.setItem("usuario", username);
-        mostrarUsuario();
-        modal.style.display = "none";
-      }
-    });
-
-    // Mostrar usuario si ya está logueado
-    function mostrarUsuario(){
-      const usuario = localStorage.getItem("usuario");
-      if(usuario){
-        userArea.innerHTML = `<span style="color:#E0E1DD;">👤 ${usuario}</span>`;
-      }
+  // Guardar usuario en localStorage
+  loginForm.addEventListener("submit", e => {
+    e.preventDefault();
+    const username = document.getElementById("username").value;
+    if(username){
+      localStorage.setItem("usuario", username);
+      loginModal.classList.add("hidden");
+      mostrarUsuario();
     }
+  });
 
-    mostrarUsuario();
-  </script>
+  // Mostrar usuario si ya está logueado
+  function mostrarUsuario(){
+    const usuario = localStorage.getItem("usuario");
+    if(usuario){
+      const userArea = document.getElementById("userArea");
+      if(userArea) userArea.innerHTML = `<span style="color:#E0E1DD;">👤 ${usuario}</span>`;
+    }
+  }
+
+  mostrarUsuario();
+</script>
 </body>
 </html>
+
